--- a/src/app/servi/servi.component.html
+++ b/src/app/servi/servi.component.html
@@ -1,3 +1,7 @@
-<p>
-  servi works!
-</p>
+<ul class="list-group">
+  <li class="list-group-item" *ngFor="let item of equipo">
+    <h6>nombre:{{item.nombre}}</h6>
+    <h6>Especialidad:{{item.especialidad}}</h6>
+    <a href="#">Leer mas..</a>
+  </li>
+  </ul>
